fixed alignment on the home page

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Noto+Sans+JP:wght@100..900&display=swap');
+
 /* Set box-sizing to border-box globally */
 * {
     box-sizing: border-box;
@@ -8,7 +10,8 @@
   /*-------------nav styling----------------*/
   header {
     background-color: #ffd0d6;
-    height: auto;
+    height: 20%;
+    font-family: "Caveat", cursive;
   }
   body::-webkit-scrollbar {
     display: none;
@@ -25,12 +28,6 @@
     background-color: #929292;
   }
 
-  #nav-buttons > div{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
   
   .logo > img {
     width: 150px;
@@ -41,6 +38,9 @@
     width: 100px;
     height: 60px;
     background-color: white;
+    border-radius: 20px;
+    font-size: 30px;
+    color: #584b4b;
   }
   
   body {
@@ -69,31 +69,52 @@
     justify-content: space-around;
     align-items: stretch; 
     flex: 1; 
+    font-family: "Noto Sans JP", sans-serif;
+    height: 80%;
   }
 
   .nekopara-img{
     filter: drop-shadow(0 0 20px rgba(255, 255, 255, 0.8)); 
+    max-height: 100%; 
+    width: auto; 
+    max-width: 100%; 
+    display: block;
+    margin: 0 auto; 
   }
-
+ #left{
+    flex: 1; 
+    display: flex;
+    justify-content: center;
+ }
+ #left > div {
+  max-width: 100%; 
+  max-height: 100%; 
+  text-align: center;
+}
   #right{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     margin: 100px;
-    font-size: 30px;
+    font-size: 40px;
     color: #584b4b;
   }
 
   /*------------menu styling -------------*/
   #contentMenu {
-    margin: 128px 128px;
+    padding: 128px 128px;
     flex: 1;
     display: grid;
     grid-template-columns: 1fr;
     gap: 32px;
     justify-content: center;
     align-items: center;
+    font-family: "Caveat", cursive;
+    font-size: 25px;
+    background-image: url(../images/flowers-background);
+    background-repeat: repeat;
+    background-size: 200px 200px; 
 }
 #menu-food{
     display: flex;
@@ -105,6 +126,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: white;
+    box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.8);
+    padding: 20px;
+    min-width: 350px;
+    color: #584b4b;
+
 }
 .food-img {
     display: flex;
@@ -136,12 +163,22 @@
   background-color: white;
   padding: 50px;
   z-index: 5;
+  font-family: "Caveat", cursive;
+  color: #584b4b;
 
+}
+#first > h2 {
+  font-size: 35px;
+}
+#first > div {
+  font-size: 25px;
+  border-top: 1px solid #584b4b;
+  padding-top: 20px;
 }
   
 #aboutMenu{
   height: 100vh;
-  background-image: url('../images/sakura\ background.avif');
-  background-size: cover; /* Adjust as needed */
-  background-repeat: repeat;
+  background-image: url(../images/flowers-background);
+    background-repeat: repeat;
+    background-size: 200px 200px; 
 }
